# PSAT

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  app.py  benchmark.ipynb  main.py  optuna_best_results.json  out.txt  out2.txt  pyproject.toml  pytest_out.txt  requirements.txt  ruff_out.txt  setup.py  test_output.txt  ui_components.py
.github/workflows/: tests.yml
psat/: __init__.py  analytics.py  cfd_loader.py  cli.py  constants.py  cpp_core.cpp  engine.py  optimization.py  visualization.py
psat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_analytics.py  test_cfd_loader.py  test_cfd_time_dependent.py  test_cli.py  test_optimization.py  test_phase6.py  test_physics.py  test_recursive_geometry.py  test_visualization.py
