[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psat"
version = "0.1.0"
description = "3D Particle Simulation for Aerosol Transport"
authors = [{ name = "Ibrahim Boutal" }]
dependencies = [
    "numpy",
    "matplotlib",
    "numba"
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
psat = "main:main"