[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psat"
version = "0.1.0"
description = "3D Particle Simulation for Aerosol Transport"
readme = "README.md"
authors = [{ name = "Ibrahim Boutal" }]
dependencies = [
    "numpy",
    "matplotlib",
    "numba"
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
# This creates a terminal command called 'psat'
# It tells Python: "When they type 'psat', run the 'main()' function inside 'psat/cli.py'"
psat = "psat.cli:main"

[tool.setuptools]
packages = ["psat"]