[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.12.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psat"
version = "0.2.0"
description = "3D Particle Simulation for Aerosol Transport"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ibrahim Boutal" }]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "numba",
    "pillow",
    "streamlit",
    "plotly",
    "pandas",
    "optuna",
    "pybind11>=2.12.0",
    "scikit-learn",
    "scipy"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "typer",
    "pre-commit",
]
cfd = [
    "pyvista",
]

[project.scripts]
# Creates a terminal command 'psat' → psat/cli.py:app()
psat = "psat.cli:app"

[tool.setuptools]
packages = ["psat"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long – handled by formatter
]

[tool.pytest.ini_options]
testpaths = ["tests"]